--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "@vitejs/plugin-react": "4.2.1",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "autoprefixer": "10.4.16",
+    "prettier": "^3.3.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint": "^9.16.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.16",
