feat: change exports to named exports, update prettier rules

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
   "tabWidth": 2,
   "useTabs": false,
   "printWidth": 120,
-  "singleQuote": false,
+  "singleQuote": true,
   "trailingComma": "es5",
   "plugins": ["prettier-plugin-organize-imports"]
 }
