--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-tailwind/react": "2.1.8",
     "@tanstack/react-router": "^1.87.2",
     "appwrite": "^16.0.2",
+    "highlight.js": "^11.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.54.0",
@@ -30,14 +31,14 @@
     "@vitejs/plugin-react": "4.2.1",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "autoprefixer": "10.4.16",
-    "prettier": "^3.3.3",
-    "prettier-plugin-organize-imports": "^4.1.0",
-    "eslint-config-prettier": "^9.1.0",
     "eslint": "^9.16.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.13.0",
     "postcss": "8.4.32",
+    "prettier": "^3.3.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "tailwindcss": "3.4.0",
     "typescript": "5.3.3",
     "typescript-eslint": "^8.18.0",
