--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.54.0",
     "react-router": "^7.0.2",
+    "react-toastify": "^10.0.6",
     "yup": "^1.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
     "@tanstack/router-devtools": "^1.87.2",
     "@tanstack/router-plugin": "^1.86.0",
-    "@types/react": "18.2.45",
+    "@types/react": "18.2.19",
     "@types/react-dom": "18.2.18",
     "@vitejs/plugin-react": "4.2.1",
     "@vitejs/plugin-react-swc": "^3.7.2",
