--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,5 @@
   "printWidth": 120,
   "singleQuote": true,
   "trailingComma": "es5",
-  "plugins": ["prettier-plugin-organize-imports"]
+  "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"]
 }
