--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.54.0",
     "react-router": "^7.0.2",
     "react-toastify": "^10.0.6",
+    "vite-tsconfig-paths": "^5.1.4",
     "yup": "^1.5.0"
   },
   "devDependencies": {
@@ -38,8 +39,9 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.13.0",
     "postcss": "8.4.32",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.2",
     "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "3.4.0",
     "typescript": "5.3.3",
     "typescript-eslint": "^8.18.0",
