--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-tailwind/react": "2.1.8",
     "@tanstack/react-router": "^1.87.2",
     "appwrite": "^16.0.2",
+    "clsx": "^2.1.1",
     "highlight.js": "^11.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
