--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -19,16 +19,16 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
+    "noFallthroughCasesInSwitch": true
     // "noUncheckedSideEffectImports": false, // TODO: enable
 
     /* Aliases */
-    "baseUrl": ".",
-    "paths": {
-      "@/assets/*": ["src/assets/*"],
-      "@/components/*": ["src/components/*"],
-      "@/models/*": ["src/models/*"]
-    }
+    // "baseUrl": ".",
+    // "paths": {
+    //   "@/assets/*": ["src/assets/*"],
+    //   "@/components/*": ["src/components/*"],
+    //   "@/models/*": ["src/models/*"]
+    // }
   },
   "include": ["src"]
 }
